--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -82,6 +82,7 @@
         width: 335px;
         height: 111px;
         margin-bottom: 10px;
+        margin-left: -5px;
     }
 
     .title_home {
@@ -116,6 +117,6 @@
     .location-card-info {
         display: flex;
         flex-direction: column;
-        margin-left: -10px;
+        margin-left: -20px;
     }
 } 
